--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,19 @@
+/*@font-face {
+  font-family: 'Wingdings';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Wingdings'), url('./../public/font/wingdings.woff') format('woff');
+  }*/
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 100vh;
+  background-image: url(./../public/background1.png);
+  background-repeat: no-repeat;
+  background-size: 100% ;
 }
 
 a {
@@ -13,4 +23,42 @@ a {
 
 * {
   box-sizing: border-box;
+}
+h1{
+  font-size: 70px;
+  padding: 10px;
+  margin: 0;
+  /*font-family: "Wingdings";*/
+}
+p {
+  /*font-family: "Wingdings";*/
+}
+footer{
+  position: fixed;
+  bottom: 0;
+  max-height: 40px;
+  background-color: white;
+  width: 100%;
+  text-align: center;
+}
+img{
+  max-height: 500px;
+}
+.flexPannel{
+  display: flex;
+}
+.leftPannel, .rightPannel{
+  padding: 150px 0px;
+  background-color: #e7e5e5;
+  max-width: 100%;
+  width: 100%;
+}
+.rightPannel{
+  background-color: rgba(231, 229, 229, 0.5);
+}
+.rightPannel p, h1 {
+  text-align: center;
+}
+.pannel3{
+  background-color: white;
 }
